more adds to article

--- a/article/article.tex
+++ b/article/article.tex
@@ -56,7 +56,7 @@
 \pagestyle{fancy} % All pages have headers and footers
 \fancyhead{} % Blank out the default header
 \fancyfoot{} % Blank out the default footer
-\fancyhead[C]{Running title $\bullet$ May 2016 $\bullet$ Vol. XXI, No. 1} % Custom header text
+\fancyhead[C]{ Gen-SAT $\bullet$ Listopad 2018 } % Custom header text
 \fancyfoot[RO,LE]{\thepage} % Custom footer text
 
 \usepackage{titling} % Customizing the title section
@@ -192,7 +192,7 @@ Poniżej zostaje opisane działanie funkcji:\\
  }
 %------------------------------------------------
 
-\section{Kontrola nad populacją}
+\section{Testy i wnioski}
 
 \subsection{Selekcja naturalna}
 
@@ -239,12 +239,17 @@ Na wykresie \textit{(Rysunek 2)} został przedstawiony czas działania algorytmu
 
 \begin{thebibliography}{99} % Bibliography - this is intentionally simple in this template
 
-\bibitem[Figueredo and Wolf, 2009]{Figueredo:2009dg}
-Figueredo, A.~J. and Wolf, P. S.~A. (2009).
-\newblock Assortative pairing and life history strategy - a cross-cultural
-  study.
-\newblock {\em Human Nature}, 20:317--330.
+\bibitem[Zasoby online]{a}
+\newblock {\em Algorytmy genetyczne }, dostęp online:
+\newblock \url{http://home.agh.edu.pl/~vlsi/AI/gen_t/}
  
+\bibitem[Zasoby online]{b}
+\newblock {\em Introduction to Genetic Algorithm \& their application in data science }, dostęp online:
+\newblock \url{https://www.analyticsvidhya.com/blog/2017/07/introduction-to-genetic-algorithm/} 
+
+\bibitem[Kazuo Sugihara]{b}
+\newblock {\em Measures for Performance Evaluation of Genetic Algorithms }, dostęp online:
+\newblock \url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.49.8611&rep=rep1&type=pdf} 
 \end{thebibliography}
 
 %----------------------------------------------------------------------------------------
